fixed internal package unittests
